--- a/plantswap/components/Button/button.module.scss
+++ b/plantswap/components/Button/button.module.scss
@@ -32,8 +32,8 @@
   }
 
   &--square {
-    // height: var(--header-height);
-    // width: var(--header-height);
+    height: var(--header-height);
+    width: var(--header-height);
     border-radius: 20px;
     box-shadow: none;
 
@@ -73,6 +73,19 @@
     }
   }
 
+  &--clean {
+    background-color: transparent;
+    padding: 0;
+    border-radius: none;
+    color: var(--color-black);
+    &:hover {
+      color: var(--color-blue);
+      background-color: transparent;
+    }
+    svg {
+      display: none;
+    }
+  }
   &--left {
     &-1 {
       margin: var(--S-spacer);
