--- a/plantswap/components/Hero/hero.module.scss
+++ b/plantswap/components/Hero/hero.module.scss
@@ -1,5 +1,6 @@
 .hero {
   width: 100%;
+  align-items: center;
   //   flex-grow: 2;
   height: calc(100vh - var(--header-height) - calc(var(--page-padding) * 2));
   height: calc(100dvh - var(--header-height) - calc(var(--page-padding) * 2));
@@ -44,14 +45,13 @@
     flex-direction: column;
     gap: var(--S-spacer);
     align-items: flex-start;
-    color: var(--color-text);
+    color: #003131;
+    // color: var(--color-text);
     width: calc(100% - 25px);
     max-width: 40em;
     padding-bottom: var(--page-padding);
 
-    &-title {
-      width: min(calc(100% - 30px), 20em);
-    }
+
 
     &-intro {
       display: flex;
@@ -72,7 +72,7 @@
     &__image {
       object-position: top;
       width: calc(100% - 50vw);
-      height: 100%;
+      // height: 100%;
       margin: unset;
       padding-bottom: var(--page-padding);
     }
