--- a/plantswap/components/PlantItem/item.module.scss
+++ b/plantswap/components/PlantItem/item.module.scss
@@ -7,7 +7,12 @@
   transition: var(--transition-settings);
 
   &:hover {
-    background-color: var(--color-blue);
+    // background-color: var(--color-blue);
+    background-color: var(--color-green);
+
+    p:not(section > p), h3{
+      color: var(--color-white);
+    }
   }
 
   &__header {
