--- a/plantswap/components/Title/title.module.scss
+++ b/plantswap/components/Title/title.module.scss
@@ -4,13 +4,15 @@
 
   &--h0 {
     font-weight: 700;
-    font-size: calc(1rem + 3vw);
+    font-size: calc(1rem + 2.5vw);
     line-height: 1em;
-    color: var(--color-text);
+    // color: var(--color-text);
+    color: #005353
   }
 
   &--h1 {
-    font-size: 2.5rem;
+    font-size: calc(1rem + 2.2vw);
+    color: #002020;
     // Change to clamp(x, x, 2.5rem) when supported
     // and to variable size when not suported.
     // --
