--- a/plantswap/src/app/[lang]/globals.css
+++ b/plantswap/src/app/[lang]/globals.css
@@ -138,18 +138,13 @@
   margin: 0;
 }
 
-/* html, */
-/* body { */
-/* max-width: 100vw; */
-/* overflow-x: hidden; */
-/* } */
+
 
 body {
   color: rgb(var(--color-bg));
-  /* background-color: #afc999; */
-  background-color: var(--background-light);
-  /* transition: 1s; */
-  /* min-height: 100dvh; */
+  /* background-color: var(--background-light); */
+  background-color: lightskyblue;
+
 }
 
 body:has([aria-expanded="true"]) {
