--- a/plantswap/components/Nav/nav.module.scss
+++ b/plantswap/components/Nav/nav.module.scss
@@ -6,19 +6,19 @@ $transition-speed: 200ms;
   align-items: center;
   font-size: 0.875em;
   height: 100%;
-  
+
   color: var(--color-black);
 
   &__list {
     position: fixed;
-    top:var(--header-height);
-    font-size: 1em;
+    top: var(--header-height);
+    font-size: clamp(0.6rem, 5vw, 0.75em);
     right: -100%;
     height: fit-content;
-    padding: 1em;
     display: flex;
     flex-direction: column;
-    
+    align-items: center;
+
     gap: 2.5em;
     transition: all $transition-speed;
     width: calc(100% - calc(var(--page-padding) * 2));
@@ -31,9 +31,7 @@ $transition-speed: 200ms;
       &--active {
         right: var(--page-padding);
         bottom: 0;
-
       }
-     
     }
     &-item {
       display: flex;
@@ -42,13 +40,10 @@ $transition-speed: 200ms;
       color: inherit;
       cursor: pointer;
       height: 100%;
-     
 
       &--active {
         color: #005353;
         font-weight: 700;
-        // color: var(--color-blue);
-        // border-bottom: 5px solid var(--color-blue);
       }
     }
   }
@@ -82,7 +77,6 @@ $transition-speed: 200ms;
     z-index: 1;
     filter: invert(1);
 
-
     span {
       display: block;
       width: 100%;
@@ -100,9 +94,7 @@ $transition-speed: 200ms;
     }
   }
 
-  
   @media screen and (min-width: 48em) {
-    
     gap: 1.5rem;
 
     &__toggle {
@@ -126,4 +118,3 @@ $transition-speed: 200ms;
     justify-content: space-between;
   }
 }
-
