:art: CHANGE bg color

--- a/plantswap/components/Filter/Window/window.module.scss
+++ b/plantswap/components/Filter/Window/window.module.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   // transform: translate(-50%, -50%);
   // padding-top: 20vh;
-  background-color: var(--background-light);
+  background-color: lightskyblue;
 
   height: calc(100vh - var(--header-height));
   height: calc(100dvh - var(--header-height));
